[package]
name = "qrono-bench"
version = "0.1.0"
authors = ["Chris Thunes <cthunes@brewtab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
futures = "0.3"
bytes = "1.0"
tokio-stream = "0.1"
rand = "0.8"
hdrhistogram = "7"

[dependencies.tokio-util]
version = "0.6"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.redis]
version = "0.19"
features = ["aio", "tokio-comp"]

[dependencies.clap]
version = "2"
