[package]
name = "qrono-bench"
version = "0.1.0"
authors = ["Chris Thunes <cthunes@brewtab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
clap = "2"
hdrhistogram = "7"
num = "0.4"
rand = "0.8"
redis = "0.19"
