[package]
name = "qrono-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
crossbeam = "0.8"
hdrhistogram = "7"
num = "0.4"
rand = "0.8"
redis = "0.22"

qrono-grpc = { path = "../qrono-grpc" }
async-trait = "0.1.52"
tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
prost-types = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
