[package]
name = "qrono-promise"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "benches"
harness = false

[dependencies]
parking_lot = "0.12"
parking_lot_core = "0.9"

[dev-dependencies]
criterion = { version = "0.3", default-features = false }
jemallocator = "0.5"
crossbeam = "0.8"
futures = "0.3"
rand = "0.8"
