[package]
name = "qrono"
version = "0.1.0"
authors = ["Chris Thunes <cthunes@brewtab.com>"]
edition = "2021"

[[bin]]
name = "qrono"
path = "src/bin/server.rs"

[[bench]]
name = "benches"
harness = false

[dependencies]
bytes = "1"
crossbeam = "0.8"
dashmap = "4"
backtrace = "0.3"
structopt = "0.3"
num_cpus = "1"

slab = "0.4"
rayon = "1"
jemallocator = "0.3.2"
memmap = "0.7"
indexmap = "1.7"
log = "0.4"
env_logger = "0.8.4"
rustc-hash = "1.1.0"
parking_lot = "0.11.0"

qrono-promise = { path = "../qrono-promise" }
qrono-channel = { path = "../qrono-channel" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
rand = "0.8"
murmur3 = "0.5"
redis = "0.19"
tempfile = "3.2"
